--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 	
 body{
-	background:url('../img/bg.jpg') center center no-repeat fixed;
+	background:url('https://farm8.staticflickr.com/7582/15328861334_a973364016_c.jpg') center center no-repeat fixed;
 	-moz-background-size: cover;
 	background-size: cover;
 	color:#221D23;
@@ -71,54 +71,5 @@ div.contact a{
 	display:block;
 }
 
-div.my{
-	background-color:#689FC9;
-	border-radius:15px;
-	font-family:'Raleway';
-	font-weight:600;
-}
 
-div.fb{
-	margin-left:20px;
-	border-radius:15px;
-	background-color:#3A5795;
-	font-family:Arial;
-	font-weight:600;
-}
-
-div.ttr{
-	background-color:#55ACEE;
-	border-radius:15px;
-	margin-left:20px;
-	font-family:'Pico';
-	font-weight:600;
-}
-
-div.gh{
-	margin-left:20px;
-	background-color:black;
-	border-radius:15px;
-	font-family:'College';
-	font-weight:600;
-}
-
-div.my:hover {
-	background-color:#78AFD9;
-	box-shadow:0px 0px 15px 2px #78AFD9;
-}
-
-div.fb:hover{
-	background-color:#4A67a5;
-	box-shadow:0px 0px 15px 2px #4A67a5;
-}
-
-div.ttr:hover{
-	background-color:#75BCFF;
-	box-shadow:0px 0px 15px 2px #75BCFF;
-}
-
-div.gh:hover{
-	background-color:#454545;
-	box-shadow:0px 0px 15px 5px #454545;
-}
 
