--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,12 @@ ul.tabs li a{
 	padding:10px;
 }
 div.box{
+	background:rgba(171, 171, 171, 1);
 	display:inline-block;
-	padding:20px 80px 20px 0px;
+	padding:20px 40px 20px 40px;
+	margin-left:20px;
+	margin-right:20px;
+	//border:1px solid black;
 }
 
 
