微調排版 & 完成第一個 function , 並修改第二的 function
To-do : 修正意料外的閃爍問題

完成第一個大數取餘數的 function
並修改第二的尋找字串 function

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-/*
-@font-face {
-    font-family: "Pico";
-    src: url(../font/PICOBLA.TTF);
-}
-
-@font-face {
-    font-family: "College";
-    src: url(../font/COLLEGIA.ttf);
-}
-*/
-
 img{
 	height:auto;
 }
@@ -87,13 +75,19 @@ ul.tabs li a{
 	text-decoration:none;
 	padding:10px;
 }
+
+div.tab{
+	min-height:200px;
+}
+
 div.box{
-	background:rgba(171, 171, 171, 1);
+	background:rgba(171, 171, 171, 0.7);
 	display:inline-block;
+	min-width:300px;
 	padding:20px 40px 20px 40px;
 	margin-left:20px;
 	margin-right:20px;
-	//border:1px solid black;
+	border:1px solid white;
 }
 
 
