--- a/css/contact.css
+++ b/css/contact.css
@@ -1,272 +1,58 @@
-﻿/* ==============  my animation START  ============== */
-	
 	div.my{
 		background-color:#689FC9;
 		border-radius:15px;
 		font-family:'Raleway';
 		font-weight:600;
-		-webkit-animation: anime_my 0.5s; /* Chrome, Safari, Opera */
-		animation: anime_my 0.5s;
+		transition-duration:3s;
 	}
-	
-	/* Chrome, Safari, Opera */
-	@-webkit-keyframes anime_my {
-		0% {
-			background: #98cFf9;
-			box-shadow:0px 0px 15px 2px #98cFf9;
-		}
-		100% {
-			background-color:#689FC9;
-			box-shadow:none;
-		}
-	}
-	
-	/* Standard syntax */
-	@keyframes anime_my {	
-		0% {
-			background: #98cFf9;
-			box-shadow:0px 0px 15px 2px #98cFf9;
-		}
-		100% {
-			background-color:#689FC9;
-			box-shadow:none;
-		}
-	} 
-	
+
 	div.my:hover {
 		background-color:#98cFf9;
 		box-shadow:0px 0px 15px 2px #98cFf9;
-		-webkit-animation: anime_my_hover 0.5s; /* Chrome, Safari, Opera */
-		animation: anime_my_hover 0.5s;
+		transition-duration:0.5s;
 	}
-	
-	/* Chrome, Safari, Opera */
-	@-webkit-keyframes anime_my_hover {
-		0% {
-			background-color:#689FC9;
-			box-shadow:none;
-		}
-		100% {
-			background: #98cFf9;
-			box-shadow:0px 0px 15px 2px #98cFf9;
-		}
-	}
-	
-	/* Standard syntax */
-	@keyframes anime_my_hover {	
-		0% {
-			background-color:#689FC9;
-			box-shadow:none;
-		}
-		100% {
-			background: #98cFf9;
-			box-shadow:0px 0px 15px 2px #98cFf9;
-		}
-	} 
 
-	/* ==============  my animation END  ============== */
-	
-	/* ==============  fb animation START  ============== */
-	
 	div.fb{
 		background-color:#3A5795;
 		margin-left:20px;
 		border-radius:15px;
 		font-family:Arial;
 		font-weight:600;
-		-webkit-animation: anime_fb 0.5s; /* Chrome, Safari, Opera */
-		animation: anime_fb 0.5s;
+		transition-duration:3s;
 	}
-	
-	/* Chrome, Safari, Opera */
-	@-webkit-keyframes anime_fb {
-		0% {
-			background: #7A97d5;
-			box-shadow:0px 0px 15px 2px #7A97d5;
-		}
-		100% {
-			background-color:#3A5795;
-			box-shadow:none;
-		}
-	}
-	
-	/* Standard syntax */
-	@keyframes anime_fb {	
-		0% {
-			background: #7A97d5;
-			box-shadow:0px 0px 15px 2px #7A97d5;
-		}
-		100% {
-			background-color:#3A5795;
-			box-shadow:none;
-		}
-	} 
-	
+
 	div.fb:hover{
 		background-color:#7A97d5;
 		box-shadow:0px 0px 15px 2px #7A97d5;
-		-webkit-animation: anime_fb_hover 0.5s; /* Chrome, Safari, Opera */
-		animation: anime_fb_hover 0.5s;
+		transition-duration:0.5s;
 	}
-	
-	/* Chrome, Safari, Opera */
-	@-webkit-keyframes anime_fb_hover {
-		0% {
-			background-color:#3A5795;
-			box-shadow:none;
-		}
-		100% {
-			background: #7A97d5;
-			box-shadow:0px 0px 15px 2px #7A97d5;
-		}
-	}
-	
-	/* Standard syntax */
-	@keyframes anime_fb_hover {	
-		0% {
-			background-color:#3A5795;
-			box-shadow:none;
-		}
-		100% {
-			background: #7A97d5;
-			box-shadow:0px 0px 15px 2px #7A97d5;
-		}
-	} 
-	/* ==============  fb animation END  ============== */
-	
-	/* ==============  ttr animation START  ============== */
-	
+
 	div.ttr{
 		background-color:#55ACEE;
 		border-radius:15px;
 		margin-left:20px;
 		font-family:'Pico';
 		font-weight:600;
-		-webkit-animation: anime_ttr 0.5s; /* Chrome, Safari, Opera */
-		animation: anime_ttr 0.5s;
+		transition-duration:3s;
 	}
-	
-	/* Chrome, Safari, Opera */
-	@-webkit-keyframes anime_ttr {
-		0% {
-			background: #a5eCFF;
-			box-shadow:0px 0px 15px 2px #a5eCFF;
-		}
-		100% {
-			background-color:#55ACEE;
-			box-shadow:none;
-		}
-	}
-	
-	/* Standard syntax */
-	@keyframes anime_ttr {	
-		0% {
-			background: #a5eCFF;
-			box-shadow:0px 0px 15px 2px #a5eCFF;
-		}
-		100% {
-			background-color:#55ACEE;
-			box-shadow:none;
-		}
-	} 
-	
+
 	div.ttr:hover{
 		background-color:#a5eCFF;
 		box-shadow:0px 0px 15px 2px #a5eCFF;
-		-webkit-animation: anime_ttr_hover 0.5s; /* Chrome, Safari, Opera */
-		animation: anime_ttr_hover 0.5s;
+		transition-duration:0.5s;
 	}
-	
-	/* Chrome, Safari, Opera */
-	@-webkit-keyframes anime_ttr_hover {
-		0% {
-			background-color:#55ACEE;
-			box-shadow:none;
-		}
-		100% {
-			background: #a5eCFF;
-			box-shadow:0px 0px 15px 2px #a5eCFF;
-		}
-	}
-	
-	/* Standard syntax */
-	@keyframes anime_ttr_hover {	
-		0% {
-			background-color:#55ACEE;
-			box-shadow:none;
-		}
-		100% {
-			background: #a5eCFF;
-			box-shadow:0px 0px 15px 2px #a5eCFF;
-		}
-	} 
-	/* ==============  ttr animation END  ============== */
-	
-	/* ==============  gh animation START  ============== */
-	
+
 	div.gh{
 		background-color:#000000;
 		margin-left:20px;
 		border-radius:15px;
 		font-family:'College';
 		font-weight:600;
-		-webkit-animation: anime_gh 0.5s; /* Chrome, Safari, Opera */
-		animation: anime_gh 0.5s;
+		transition-duration:3s;
 	}
-	
-	/* Chrome, Safari, Opera */
-	@-webkit-keyframes anime_gh {
-		0% {
-			background: #ababab;
-			box-shadow:0px 0px 15px 2px #ababab;
-		}
-		100% {
-			background-color:#000000;
-			box-shadow:none;
-		}
-	}
-	
-	/* Standard syntax */
-	@keyframes anime_gh {	
-		0% {
-			background: #ababab;
-			box-shadow:0px 0px 15px 2px #ababab;
-		}
-		100% {
-			background-color:#000000;
-			box-shadow:none;
-		}
-	} 
-	
+
 	div.gh:hover{
 		background-color:#ababab;
 		box-shadow:0px 0px 15px 2px #ababab;
-		-webkit-animation: anime_gh_hover 0.5s; /* Chrome, Safari, Opera */
-		animation: anime_gh_hover 0.5s;
+		transition-duration:0.5s;
 	}
-	
-	/* Chrome, Safari, Opera */
-	@-webkit-keyframes anime_gh_hover {
-		0% {
-			background-color:#000000;
-			box-shadow:none;
-		}
-		100% {
-			background: #ababab;
-			box-shadow:0px 0px 15px 2px #ababab;
-		}
-	}
-	
-	/* Standard syntax */
-	@keyframes anime_gh_hover {	
-		0% {
-			background-color:#000000;
-			box-shadow:none;
-		}
-		100% {
-			background: #ababab;
-			box-shadow:0px 0px 15px 2px #ababab;
-		}
-	} 
-	/* ==============  gh animation END  ============== */
-	
